Onre more bug squash

--- a/src/components/item/_item.scss
+++ b/src/components/item/_item.scss
@@ -94,7 +94,6 @@
         .item-description{
             font-family: OpenSans;
             font-size: 11px;
-            display: flex;
             gap: 1px;
         }
     }
